Bug 86424 - [BDW regression]After unplug HDMI/DP, eld information show abnormally on the text mode.
Summary: [BDW regression]After unplug HDMI/DP, eld information show abnormally on the ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other Linux (All)
: medium normal
Assignee: Jani Nikula
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords: bisect_pending
Depends on:
Blocks:
 
Reported: 2014-11-18 06:34 UTC by zhaodan
Modified: 2017-10-06 14:33 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (121.68 KB, text/plain)
2014-11-18 06:34 UTC, zhaodan
no flags Details
drm/i915/audio: fix monitor presence indication after disable (1.06 KB, patch)
2014-11-18 09:42 UTC, Jani Nikula
no flags Details | Splinter Review

Description zhaodan 2014-11-18 06:34:27 UTC
Created attachment 109655 [details]
dmesg

Precondition:
Connect HDMI/DP cable with monitor.

Reproduce Steps:
1.cat /proc/asound/card0/eld*
2.unplug HDMI/DP cable
3.cat /proc/asound/card0/eld*

Actual result:
After step3,unplug HDMI/DP cable,the screen dispaly as below: 
monitor_present         1
eld_valid               0

Except result:
After step3,unplug HDMI/DP cable,the screen should dispaly as below: 
monitor_present         0
eld_valid               0

The test environment:
Hardware
CRB:SawTooth Peak
Platform: Broadwell-U
CPU: Broadwell U F0
Chipset PCH: Wildcat Point –LP B0
Audio card: ALC286S
Software
BIOS: BDW-E1R1.86C.0093.R00.1409071941
Kernel: 3.18.0-rc4
Branch: git://anongit.freedesktop.org/drm-intel
drm-intel-nightly
Commit:e49ebf

Comment:
On the drm-intel-nightly 2014_10_27,can't reproduce the issue.
Comment 1 Daniel Vetter 2014-11-18 08:38:37 UTC
Since older -nightly doesn't seem to be affected this sounds like a regression. Please bisect.

Also please boot with drm.debug=0xe, reproduce the bug and reattach a new dmesg. You can leave out any other debug knobs, we don't need e.g. initcall debugging.

Also please grab the output of xrandr before/after unplugging.
Comment 2 Jani Nikula 2014-11-18 09:42:53 UTC
Created attachment 109662 [details] [review]
drm/i915/audio: fix monitor presence indication after disable

Please try this patch on top of current drm-intel-nightly.
Comment 3 Daniel Vetter 2014-11-18 09:58:55 UTC
Ah, good catch. This is a regresion from

commit 5fad84a7530f8e7664cdc6f490cb90653fed1266
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Tue Nov 4 10:30:23 2014 +0200

    drm/i915: rewrite hsw/bdw audio codec enable/disable sequences

Pls submit the patch with sufficient cc (Rodrigo) and all that, pretty sure this is it.
Comment 4 Jani Nikula 2014-11-18 10:15:42 UTC
Patch on the list, please test: http://patchwork.freedesktop.org/patch/37068
Comment 5 Daniel Vetter 2014-11-18 10:17:31 UTC
commit eb45fa0b93e03b03848cd048dcc57648409c8125
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Tue Nov 18 12:11:29 2014 +0200

    drm/i915/audio: fix monitor presence indication after disable
Comment 6 zhaodan 2014-11-20 05:12:57 UTC
I had verify the issue and can't reproduce it on BDW platform,the detail environment as below:
Hardware
CRB:SawTooth Peak
Platform: Broadwell-U
CPU: Broadwell U F0
Chipset PCH: Wildcat Point –LP B0
Audio card: ALC286S
Software
BIOS: BDW-E1R1.86C.0093.R00.1409071941
Kernel: 3.18.0-rc4
Branch: git://anongit.freedesktop.org/drm-intel
drm-intel-nightly
Commit:eb45fa0b93e03b03848cd048dcc57648409c8125
Comment 7 Elizabeth 2017-10-06 14:33:42 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.